--- a/wiki/ShamlUsage.wiki
+++ b/wiki/ShamlUsage.wiki
@@ -17,3 +17,5 @@ shaml generate resource resname name:string;date:DateTime
 This will create a new model called Resname, with two properties. It will also create a scaffold view, unit tests, and a controller to handle editing the resource.
 
 Apart from the installation, s#aml-architecture uses the same things as s#arp-architecture, Fluent NHibernate, dotNetOpenAuth and of course ASP.NET MVC, so check their documentations too for more.
+
+Check TreeListing page for more information about the structure of the generated application
