--- a/wiki/ShamlUsage.wiki
+++ b/wiki/ShamlUsage.wiki
@@ -7,7 +7,7 @@ To create a shaml application use the shaml command line utility to generate an 
 shaml generate app NewApp
 }}}
 
-this will create a NewApp directory with the complete s#aml-architecture stack. Open the solution in VS.NET2008, compile, deploy on your mono box and you're ready to go.
+this will create a !NewApp directory with the complete s#aml-architecture stack. Open the solution in VS.NET2008, compile, deploy on your mono box and you're ready to go.
 
 The shaml command can also create REST-styled resources. Run the following inside your solution directory:
 {{{
