Edited wiki page through web user interface.

--- a/wiki/TreeListing.wiki
+++ b/wiki/TreeListing.wiki
@@ -4,7 +4,7 @@
 
  * !WebBase: Base directory of the MVC application
   * App
-   * !AppServices: Base classes that were generated from shaml. Put your Application Services related files too. Includes the !OpenIDController, the !MembershipAdministrator Controller and the Routing table.
+   * !AppServices: Base classes that were generated from shaml. Put your Application Services related files too. Includes the OpenIDController, the !MembershipAdministrator Controller and the Routing table.
    * Controllers: Stores your controllers
     * Support: Stores the controllers that support the framework: !OpenID, !Administration, !Home, !Login
    * Models: Domain classes
