--- a/wiki/DownloadSource.wiki
+++ b/wiki/DownloadSource.wiki
@@ -1,3 +1,3 @@
 #summary Where to download the sources
 
-They can be found at "github":http://github.com/sztupy/shaml/tree/master
+They can be found at [http://github.com/sztupy/shaml/tree/master github]
