Edited wiki page through web user interface.

--- a/wiki/KnownBugs.wiki
+++ b/wiki/KnownBugs.wiki
@@ -11,3 +11,4 @@
 == !ToDo ==
 
  * The !MembershipAdministration controller uses GET commands to update the Memberships. It needs urgent refactoring.
+ * Makefiles to ease compiling under mono
