--- a/wiki/ShamlInstallation.wiki
+++ b/wiki/ShamlInstallation.wiki
@@ -44,7 +44,7 @@ Run
 {{{
 shaml compile
 }}}
-in the solution directory to compile both the application and the tests. Run `compass --update` too, if you want to update your stylesheets.
+in the solution directory to compile both the application and the tests. Run `compass --update` from the web project directory too, if you want to update your stylesheets.
 
 If you don't user ruby then run
 {{{
