Edited wiki page through web user interface.

--- a/wiki/ShamlUsage.wiki
+++ b/wiki/ShamlUsage.wiki
@@ -42,7 +42,7 @@ If you don't use ruby then run
 {{{
 gmcs -recurse:*.cs `ls ../libraries/*.dll | sed "s/../-r:../"` -r:System.Web.Routing -r:System.Web -t:library -out:bin/WebBase.dll
 }}}
-from the main Web directory. Then copy all files from the libraries dir to the bin dir, and you're ready. (of course replace bin/WebBase.dll with the name of your project)
+from the main Web directory. Then copy all files from the libraries dir to the bin dir, and you're ready. (of course replace bin/!WebBase.dll with the name of your project)
 
 = Running =
 
