--- a/wiki/ShamlUsage.wiki
+++ b/wiki/ShamlUsage.wiki
@@ -18,7 +18,7 @@ shaml generate resource resname name:string;date:DateTime
 
 This will create a new model called Resname, with two properties. It will also create a scaffold view, unit tests, and a controller to handle editing the resource.
 
-Apart from the installation, s#aml-architecture uses the same things as s#arp-architecture, Fluent NHibernate, dotNetOpenAuth and of course ASP.NET MVC, so check their documentations for more information. You can also read about the [GootToKnow differences] between S#arp-architecture and Shaml.
+Apart from the installation, s#aml-architecture uses the same things as s#arp-architecture, Fluent NHibernate, dotNetOpenAuth and of course ASP.NET MVC, so check their documentations for more information. You can also read about the [GoodToKnow differences] between S#arp-architecture and Shaml.
 
 == Without the generator application ==
 
