--- a/wiki/KnownBugs.wiki
+++ b/wiki/KnownBugs.wiki
@@ -6,7 +6,7 @@
 
  * Html.!AntiforgeryToken helper does not work under mono
  * Lazy loading in NHibernate doesn't work under mono. By default it is therefore disabled.
- * Under mono the return_to parameter while initiating an OpenID reuest will incorrectly contain "UrlRouting.axd" too. You have to explicitly add the return_to parameter when constructing the request with !OpenIdRelyingParty.!CreateRequest
+ * Under mono the return_to parameter while initiating an OpenID reuest will incorrectly contain "!UrlRouting.axd" too. You have to explicitly add the return_to parameter when constructing the request with !OpenIdRelyingParty.!CreateRequest
 
 == !ToDo ==
 
