--- a/wiki/ShamlUsage.wiki
+++ b/wiki/ShamlUsage.wiki
@@ -1,4 +1,4 @@
-#summary How to create a S#aml-architecture application
+#summary How to create a S#aml Architecture application
 
 = Create application =
 
@@ -9,16 +9,16 @@ To create a shaml application use the shaml command line utility to generate an 
 shaml generate app NewApp
 }}}
 
-this will create a !NewApp directory with the complete s#aml-architecture stack. Change the database connection strings in NHibernate.config and Web.config and you're ready.
+this will create a !NewApp directory with the complete S#aml Architecture stack. 
 
 The shaml command can also create REST-styled resources. Run the following inside your solution directory:
 {{{
-shaml generate resource resname name:string;date:DateTime
+shaml generate resource resname "name:string;date:DateTime"
 }}}
 
 This will create a new model called Resname, with two properties. It will also create a scaffold view, unit tests, and a controller to handle editing the resource.
 
-Apart from the installation, s#aml-architecture uses the same things as s#arp-architecture, Fluent NHibernate, dotNetOpenAuth and of course ASP.NET MVC, so check their documentations for more information. You can also read about the [GoodToKnow differences] between S#arp-architecture and Shaml.
+Apart from the installation, S#aml Architecture uses the same things as S#arp Architecture, Fluent NHibernate, DotNetOpenAuth and of course ASP.NET MVC 2, so check their documentations for more information. You can also read about the [GoodToKnow differences] between S#arp Architecture and Shaml.
 
 == Without the generator application ==
 
@@ -40,9 +40,9 @@ in the solution directory to compile both the application and the tests.
 
 If you don't use ruby then run
 {{{
-gmcs -recurse:*.cs `ls ../libraries/*.dll | sed "s/../-r:../"` -r:System.Web.Routing -r:System.Web -t:library -out:bin/WebBase.dll
+xbuild ProjetName.sln
 }}}
-from the main Web directory. Then copy all files from the libraries dir to the bin dir, and you're ready. (of course replace bin/!WebBase.dll with the name of your project)
+from the main Web directory.
 
 = Running =
 
@@ -56,8 +56,11 @@ Run
 {{{
 shaml server
 }}}
+
 in the solution directory or run
+
 {{{
 MONO_PATH="/path/to/app/bin" xsp2 --port 8080
 }}}
+
 in the web application project directory
