Edited wiki page through web user interface.

--- a/wiki/ChangesToSharpArchitecture.wiki
+++ b/wiki/ChangesToSharpArchitecture.wiki
@@ -7,10 +7,11 @@ The project's 0.5.0 GA version is based on S#arp Architecture 1.5 beta 1
  * The support library's names are Shaml, instead of !SharpArch
  * Shaml uses !LinFu.IoC instead of Castle.Windsor because the latter had issues working on mono. Althoug LinFu has fever features it is lightweight and works well with Shaml
  * Shaml uses an integrated NHibernate based Membership/Role/Session/Profile Provider, that resides in Shaml.Membership
- * Shaml has an extended IRepository<T> class to allow easy pagination, and searching
+ * Shaml has an extended IRepository`<T>` class to allow easy pagination, and searching
+ * Shaml has client side validation support for NHibernate Validator
  * Built-in optionated OpenID support
   * Uses !DotNetOpenAuth
-  * Uses a modified Membership provider based to support multiple OpenID's per one identity
+  * Uses a modified Membership provider to support multiple OpenID's per one identity
  * NHaml is the default view engine
   * The default view engine is still supported
  * Uses the [http://compass-style.org Compass] stylesheet framework to build css stylesheets
