--- a/wiki/ChangesToSharpArchitecture.wiki
+++ b/wiki/ChangesToSharpArchitecture.wiki
@@ -5,7 +5,7 @@
 The project's 0.5.0 GA version is based on S#arp Architecture 1.5 beta 1
 
  * The support library's names are Shaml, instead of !SharpArch
- * Shaml uses !LinFu.IoC instead of Castle.Windsor because the latter had issues working on mono. Althoug LinFu has fever features it is lightweight and works well with Shaml
+ * Shaml uses !LinFu.IoC instead of Castle.Windsor because the latter had issues working on mono. Although !LinFu has fever features it is lightweight and works well with Shaml
  * Shaml uses an integrated NHibernate based Membership/Role/Session/Profile Provider, that resides in Shaml.Membership
  * Shaml has an extended IRepository`<T>` class to allow easy pagination, and searching
  * Shaml has client side validation support for NHibernate Validator
@@ -16,3 +16,4 @@ The project's 0.5.0 GA version is based on S#arp Architecture 1.5 beta 1
   * The default view engine is still supported
  * Uses the [http://compass-style.org Compass] stylesheet framework to build css stylesheets
  * Uses a ruby based tool to create the CRUD scaffolds instead of !T4Toolkit
+ * Alternative directory structure
