Edited wiki page through web user interface.

--- a/wiki/Benchmark.wiki
+++ b/wiki/Benchmark.wiki
@@ -7,7 +7,7 @@ ab -c 20 -n 2000 website
 }}}
 
 The mean requests per second results were the following (best results from three runs):
- * rails using mod_rails: 7.86
- * merb  using mod_rack: 9.75
- * shaml using xsp2: 19.51
- * shaml using mod_mono: 20.32
+ * rails using mod_rails: 7.86  `[#/sec] (mean)`
+ * merb  using mod_rack: 9.75  `[#/sec] (mean)`
+ * shaml using xsp2: 19.51  `[#/sec] (mean)`
+ * shaml using mod_mono: 20.32  `[#/sec] (mean)`
